creating CPU usage monitor using Chart.js

--- a/AJAXprogressFileUpload/index.html
+++ b/AJAXprogressFileUpload/index.html
@@ -1,97 +1,96 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
-    <style>
-      .progress-bar {
-        height: 35px;
-        width: 250px;
-        border: 2px solid rgb(79, 110, 248);
-      }
-      .progress-bar-fill {
-        height: 100%;
-        width: 0%;
-        background: lightblue;
-        display: flex;
-        align-items: center;
-        font-weight: bold;
-        transition: width 0.25s;
-      }
 
-      .progress-bar-text {
-        margin-left: 10px;
-        font-weight: bold;
-      }
-    </style>
-  </head>
-  <body>
-    <h1>Upload using AJAX</h1>
-    <form class="form" id="uploadForm" enctype="multipart/form-data">
-      <input type="file" name="inpfile" id="inpfile" /><br />
-      <!-- Download by entering a file URL -->
-      <input
-        type="text"
-        name="inpfileurl"
-        id="inpfileurl"
-        placeholder="Enter file URL"
-      /><br /> 
-      
-      <input class="button" type="submit" value="Upload"/>
-    </form>
-    <div class="progress-bar" id="progressbar">
-      <div class="progress-bar-fill">
-        <span class="progress-bar-text">0%</span>
-      </div>
+<head>
+  <meta charset="UTF-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Document</title>
+  <style>
+    .progress-bar {
+      height: 35px;
+      width: 250px;
+      border: 2px solid rgb(79, 110, 248);
+    }
+
+    .progress-bar-fill {
+      height: 100%;
+      width: 0%;
+      background: lightblue;
+      display: flex;
+      align-items: center;
+      font-weight: bold;
+      transition: width 0.25s;
+    }
+
+    .progress-bar-text {
+      margin-left: 10px;
+      font-weight: bold;
+    }
+  </style>
+</head>
+
+<body>
+  <h1>Upload using AJAX</h1>
+  <form class="form" id="uploadForm" enctype="multipart/form-data">
+    <input type="file" name="inpfile" id="inpfile" /><br />
+    <!-- Download by entering a file URL -->
+    <input type="text" name="inpfileurl" id="inpfileurl" placeholder="Enter file URL" /><br />
+
+    <input class="button" type="submit" value="Upload" />
+  </form>
+  <div class="progress-bar" id="progressbar">
+    <div class="progress-bar-fill">
+      <span class="progress-bar-text">0%</span>
     </div>
+  </div>
 
-    <script>
-      var form = new FormData(document.getElementById("uploadForm"));
-var inputValue = form.get("inpfile");
+  <script>
+    var form = new FormData(document.getElementById("uploadForm"));
+    var inputValue = form.get("inpfile");
 
-      // get file name from URL
-      // const url = document.getElementById("inpfileurl").value;
-      // var myfile = document.querySelector('#inpfile');
-      const uploadForm = document.getElementById("uploadForm");
-      const inpfile = document.getElementById("inpfile");
-      const progressBarFill = document.querySelector(
-        "#progressbar > .progress-bar-fill"
-      );
-      const progressBarText =
-        progressBarFill.querySelector(".progress-bar-text");
+    // get file name from URL
+    // const url = document.getElementById("inpfileurl").value;
+    // var myfile = document.querySelector('#inpfile');
+    const uploadForm = document.getElementById("uploadForm");
+    const inpfile = document.getElementById("inpfile");
+    const progressBarFill = document.querySelector(
+      "#progressbar > .progress-bar-fill"
+    );
+    const progressBarText =
+      progressBarFill.querySelector(".progress-bar-text");
 
-      uploadForm.addEventListener("submit", uploadFile);
+    uploadForm.addEventListener("submit", uploadFile);
 
-        // let filename = '';
-        //     filename = new URL(url).pathname.split("/").pop();
+    // let filename = '';
+    //     filename = new URL(url).pathname.split("/").pop();
 
 
 
-      function uploadFile(e) {
-        //   filename = new URL(url).pathname.split("/").pop();
-        // if(myfile === null){
-        //   myfile.files[0].name = filename;
-        //   inpfile.value = url;
+    function uploadFile(e) {
+      //   filename = new URL(url).pathname.split("/").pop();
+      // if(myfile === null){
+      //   myfile.files[0].name = filename;
+      //   inpfile.value = url;
 
-        // }
-        
-// console.log(`${filename} is the file name from the URL ${url} | ${myfile.value} ${inpfile.value}`);
-console.log(inputValue);
-        e.preventDefault();
-        const xhr = new XMLHttpRequest();
-        xhr.open("POST", "upload.php");
-        xhr.upload.addEventListener("progress", (e) => {
-          const percent = e.lengthComputable ? (e.loaded / e.total) * 100 : 0;
-          progressBarFill.style.width = percent.toFixed(2) + "%";
-          progressBarText.textContent = percent.toFixed(2) + "%";
-        });
+      // }
 
-        // xhr.setRequestHeader("Content-Type", "multiplart/form-data");
-        xhr.send(new FormData(uploadForm));
-      }
-    </script>
+      // console.log(`${filename} is the file name from the URL ${url} | ${myfile.value} ${inpfile.value}`);
+      console.log(inputValue);
+      e.preventDefault();
+      const xhr = new XMLHttpRequest();
+      xhr.open("POST", "upload.php");
+      xhr.upload.addEventListener("progress", (e) => {
+        const percent = e.lengthComputable ? (e.loaded / e.total) * 100 : 0;
+        progressBarFill.style.width = percent.toFixed(2) + "%";
+        progressBarText.textContent = percent.toFixed(2) + "%";
+      });
 
-  </body>
+      // xhr.setRequestHeader("Content-Type", "multiplart/form-data");
+      xhr.send(new FormData(uploadForm));
+    }
+  </script>
+
+</body>
+
 </html>
