creating CPU usage monitor using Chart.js for arclight

--- a/CPUmonitor/index.html
+++ b/CPUmonitor/index.html
@@ -40,7 +40,7 @@ var config = {
         datasets: [
             {
                 label: 'CPU Usage Averaged',
-                data: [],
+                data: [0, 15, 20, 25, 30, 35, 40, 45, 50, 55, 60, 65, 70, 75, 80, 85, 90, 95, 100],
                 backgroundColor: 'transparent',
                 borderColor: 'rgba(255,255,255,0.5)',
                 pointBackgroundColor: 'transparent',
