--- a/Uppy/index.html
+++ b/Uppy/index.html
@@ -1,64 +1,52 @@
 <!doctype html>
-<html>
-  <head>
+<html lang="en">
+
+<head>
+    <!-- Required meta tags -->
     <meta charset="utf-8">
-    <title>Uppy</title>
-    <link href="https://releases.transloadit.com/uppy/v2.4.1/uppy.min.css" rel="stylesheet">
-  </head>
-  <body>
-    <div id="drag-drop-area"></div>
-    <div id="pick-files"></div>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
 
+    <!-- Bootstrap CSS -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 
-    <script src="https://releases.transloadit.com/uppy/v2.4.1/uppy.min.js"></script>
+    <title>Hello, world!</title>
+</head>
+
+<body>
+    <div class="col-8 offset-2 my-5">
+        <div class="card">
+            <div class="body-card">
+                <h5>Chart JS</h5>
+                <canvas id="myChart"></canvas>
+            </div>
+        </div>
+
+    </div>
+    <script src="https://cdn.jsdelivr.net/npm/chart.js@2.9.4"></script>
     <script>
-const Uppy = require('@uppy/core')
-const Dashboard = require('@uppy/dashboard')
-const GoogleDrive = require('@uppy/google-drive')
-const Dropbox = require('@uppy/dropbox')
-const Box = require('@uppy/box')
-const Facebook = require('@uppy/facebook')
-const OneDrive = require('@uppy/onedrive')
-const Tus = require('@uppy/tus')
-const Url = require('@uppy/url')
-const DropTarget = require('@uppy/drop-target')
-const GoldenRetriever = require('@uppy/golden-retriever')
 
-const uppy = new Uppy({
-  debug: true,
-  autoProceed: false,
-  restrictions: {
-    maxFileSize: 1000000,
-    maxNumberOfFiles: 3,
-    minNumberOfFiles: 2,
-    allowedFileTypes: ['image/*', 'video/*'],
-    requiredMetaFields: ['caption'],
-  }
-})
-.use(Dashboard, {
-  trigger: '.UppyModalOpenerBtn',
-  inline: true,
-  target: '.DashboardContainer',
-  showProgressDetails: true,
-  note: 'Images and video only, 2–3 files, up to 1 MB',
-  height: 470,
-  metaFields: [
-    { id: 'name', name: 'Name', placeholder: 'file name' },
-    { id: 'caption', name: 'Caption', placeholder: 'describe what the image is about' }
-  ],
-  browserBackButtonClose: false
-})
-.use(GoogleDrive, { target: Dashboard, companionUrl: 'https://companion.uppy.io' })
-.use(Dropbox, { target: Dashboard, companionUrl: 'https://companion.uppy.io' })
-.use(OneDrive, { target: Dashboard, companionUrl: 'https://companion.uppy.io' })
-.use(Tus, { endpoint: 'upload.php' })
-.use(DropTarget, {target: document.body })
-.use(GoldenRetriever)
+        const ctx = document.getElementById('myChart').getContext('2d');
+        const chart = new Chart(ctx, {
+            type: 'line',
+            data: {
+                labels: ['January', 'February', 'March', 'April', 'May', 'June', 'July'],
+                datasets: [{
+                    label: 'My first dataset',
+                    data: [12, 19, 3, 5, 2, 3],
+                    backgroundColor: 
+                        'rgba(255, 99, 132, 0.2)',
+                        borderColor: 'rgb(255, 99, 132)'
+                
+                }]
+            },
+            options: {}
+        });
 
-uppy.on('complete', result => {
-  console.log('successful files:', result.successful)
-  console.log('failed files:', result.failed)
-})
     </script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
+        crossorigin="anonymous"></script>
 </body>
+
 </html>
