--- a/GoogleChart/chartjs/index.html
+++ b/GoogleChart/chartjs/index.html
@@ -9,6 +9,7 @@
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+        <script src="/socket.io/socket.io.js"></script>
 
     <title>Hello, world!</title>
 </head>
@@ -25,23 +26,34 @@
     </div>
     <script src="https://cdn.jsdelivr.net/npm/chart.js@2.9.4"></script>
     <script>
+      var chartLoaded = false;
+      var histogram = [];
 
+      function drawBackgroundColor() {
         const ctx = document.getElementById('myChart').getContext('2d');
         const chart = new Chart(ctx, {
             type: 'line',
             data: {
-                labels: ['January', 'February', 'March', 'April', 'May', 'June', 'July'],
+                labels: [0,10,20,30,40,50,60,70,80,90,100],
                 datasets: [{
                     label: 'My first dataset',
-                    data: [12, 19, 3, 5, 2, 3],
+                    data: [],
                     backgroundColor: 
                         'rgba(255, 99, 132, 0.2)',
                         borderColor: 'rgb(255, 99, 132)'
                 
                 }]
             },
-            options: {}
+            options: {
+        scales: {
+            y: {
+                suggestedMin: 0,
+                suggestedMax: 100
+            }
+        }
+    }
         });
+    }
 
     </script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
