--- a/Remo/index.html
+++ b/Remo/index.html
@@ -11,14 +11,30 @@
 </head>
 
 <body>
-    <form class="form" id="myform">
+    <form class="form" id="myform" enctype="multipart/form-data">
         <div class="mb-3">
-            <label for="exampleInputEmail1" class="form-label">Email address</label>
-            <input type="email" class="form-control" name="exampleInputEmail1" id="exampleInputEmail1" aria-describedby="emailHelp">
+            <label class="form-label">First Name</label>
+            <input type="text" class="form-control" name="first_name" id="first_name">
         </div>
         <div class="mb-3">
-            <label for="exampleInputPassword1" class="form-label">Password</label>
-            <input type="password" class="form-control" name="exampleInputPassword1" id="exampleInputPassword1">
+            <label class="form-label">Last Name</label>
+            <input type="text" class="form-control" name="last_name" id="last_name">
+        </div>
+        <div class="mb-3">
+            <label class="form-label">Gender</label>
+            <input type="text" class="form-control" name="gender" id="gender">
+        </div>
+        <div class="mb-3">
+            <label class="form-label">Email</label>
+            <input type="email" class="form-control" name="email" id="email">
+        </div>
+        <div class="mb-3">
+            <label class="form-label">Password</label>
+            <input type="password" class="form-control" name="password" id="password">
+        </div>
+        <div class="mb-3">
+            <label class="form-label">Phone Number</label>
+            <input type="number" class="form-control" name="number" id="number">
         </div>
 
         <button type="submit" class="btn btn-primary">Submit</button>
@@ -30,17 +46,58 @@
         crossorigin="anonymous"></script>
 
     <script>
-        const myform = document.getElementById("myform");
-        myform.addEventListener("submit", function (e) {
+        //send form data to create user in endpoint localhost://api/users in json
+        var form = document.getElementById('myform');
+        form.addEventListener('submit', function (e) {
             e.preventDefault();
-            const formData = new FormData(myform);
-            const xhr = new XMLHttpRequest();
-            xhr.open("POST", "https://reqres.in/api/users");
-            xhr.send(formData);
-            xhr.onload = function () {
-                console.log(xhr.responseText);
-            }
-        })
+            var first_name = document.getElementById('first_name').value;
+            var last_name = document.getElementById('last_name').value;
+            var gender = document.getElementById('gender').value;
+            var email = document.getElementById('email').value;
+            var password = document.getElementById('password').value;
+            var number = document.getElementById('number').value;
+
+            //Fetch POST request
+                fetch('http://localhost:3001/api/users', {
+                    method: 'POST',
+                    mode: "no-cors",
+                    body: JSON.stringify({
+                        first_name: first_name,
+                        last_name: last_name,
+                        gender: gender,
+                        email: email,
+                        password: password,
+                        number: number
+                    }),
+                    headers: {
+                    'Content-Type': 'application/json; charset=utf-8'
+                }
+        }).then(function (response) {
+                    return response;
+                }).then(function (data) {
+                    console.log(data)
+                })
+        });
+
+        // const thisForm = document.getElementById('myform');
+        // thisForm.addEventListener('submit', async function (e) {
+        //     e.preventDefault();
+        //     const formData = new FormData(thisForm).entries()
+        //     const response = await fetch('http://localhost:3001/api/users', {
+        //         method: 'POST',
+        //         headers: {
+        //             Accept: 'application/json',
+        //             'Content-Type': 'application/json',
+        //             // Authorization: 'Bearer ' + token // if you use token
+        //         }, mode: "no-cors",
+        //         body: JSON.stringify(Object.fromEntries(formData))
+        //     });
+
+        //     const result = await response.json();
+        //     console.log(result)
+        // });
+
+
     </script>
 </body>
 
