--- a/JAVASCRIPT_course/12_Await, Promises, Callbacks/index.html
+++ b/JAVASCRIPT_course/12_Await, Promises, Callbacks/index.html
@@ -91,7 +91,7 @@ const datas = [
     { name: "Sagar", profession: "coder" },
     { name: "Anuj", profession: "Software Engineer" }
 ];
-async function getDatas() {
+function getDatas() {
         setTimeout(() => {
         let output="";
         datas.forEach((data, index) => {
@@ -99,16 +99,26 @@ async function getDatas() {
         })
         document.body.innerHTML = output;
     }, 1000)
-
-await createdata(newData){
-    setTimeout(() => {
-        datas.push(newData)
-    }, 2000)
 }
-createdata({name:"Prateek", profession: "Entrepreneur"}).then(getDatas).catch(err => console.log(err))
-getDatas()
-}
+function createdata(newData) {
+    return new Promise((resolve, reject) => {
 
+        setTimeout(() => {
+            datas.push(newData)
+            let error = false;
+            if(!error){
+                resolve()
+            }else{
+                reject("Kuch sahi nhi hai")
+            }
+        }, 2000)
+    })
+}
+async function start(){
+    await createdata({name:"Prateek", profession: "Entrepreneur"})
+    getDatas()
+}
+start();
 </script>
 </body>
 </html>
