--- a/RESTfullApi_MySQL/index.html
+++ b/RESTfullApi_MySQL/index.html
@@ -46,56 +46,55 @@
         crossorigin="anonymous"></script>
 
     <script>
-        //send form data to create user in endpoint localhost://api/users in json
-        var form = document.getElementById('myform');
-        form.addEventListener('submit', function (e) {
-            e.preventDefault();
-            var first_name = document.getElementById('first_name').value;
-            var last_name = document.getElementById('last_name').value;
-            var gender = document.getElementById('gender').value;
-            var email = document.getElementById('email').value;
-            var password = document.getElementById('password').value;
-            var number = document.getElementById('number').value;
-
-            //Fetch POST request
-                fetch('http://localhost:3001/api/users', {
-                    method: 'POST',
-                    mode: "no-cors",
-                    body: JSON.stringify({
-                        first_name: first_name,
-                        last_name: last_name,
-                        gender: gender,
-                        email: email,
-                        password: password,
-                        number: number
-                    }),
-                    headers: {
-                    'Content-Type': 'application/json; charset=utf-8'
-                }
-        }).then(function (response) {
-                    return response.json();
-                }).then(function (data) {
-                    console.log(data)
-                })
-        });
-
-        // const thisForm = document.getElementById('myform');
-        // thisForm.addEventListener('submit', async function (e) {
+        // send form data to create user in endpoint localhost://api/users in json
+        // var form = document.getElementById('myform');
+        // form.addEventListener('submit', function (e) {
         //     e.preventDefault();
-        //     const formData = new FormData(thisForm).entries()
-        //     const response = await fetch('http://localhost:3001/api/users', {
-        //         method: 'POST',
-        //         headers: {
-        //             Accept: 'application/json',
-        //             'Content-Type': 'application/json',
-        //             // Authorization: 'Bearer ' + token // if you use token
-        //         }, mode: "no-cors",
-        //         body: JSON.stringify(Object.fromEntries(formData))
-        //     });
+        //     var first_name = document.getElementById('first_name').value;
+        //     var last_name = document.getElementById('last_name').value;
+        //     var gender = document.getElementById('gender').value;
+        //     var email = document.getElementById('email').value;
+        //     var password = document.getElementById('password').value;
+        //     var number = document.getElementById('number').value;
 
-        //     const result = await response.json();
-        //     console.log(result)
+        //     //Fetch POST request
+        //         fetch('http://localhost:3001/api/users', {
+        //             method: 'POST',
+        //             body: JSON.stringify({
+        //                 first_name: first_name,
+        //                 last_name: last_name,
+        //                 gender: gender,
+        //                 email: email,
+        //                 password: password,
+        //                 number: number
+        //             }),
+        //             headers: {
+        //             'Content-Type': 'application/json; charset=utf-8'
+        //         }
+        // }).then(function (response) {
+        //             return response.json();
+        //         }).then(function (data) {
+        //             console.log(data)
+        //         })
         // });
+
+        const thisForm = document.getElementById('myform');
+        thisForm.addEventListener('submit', async function (e) {
+            e.preventDefault();
+            const formData = new FormData(thisForm).entries()
+            const response = await fetch('http://localhost:3001/api/users', {
+                method: 'POST',
+                headers: {
+                    Accept: 'application/json',
+                    'Content-Type': 'application/json',
+                    // Authorization: 'Bearer ' + token // if you use token
+                },
+                body: JSON.stringify(Object.fromEntries(formData))
+            });
+
+            const result = await response.json();
+            console.log(result)
+        });
 
 
     </script>
