Corrected timeline dates

--- a/Bootstrap/CodepenProject1/index.html
+++ b/Bootstrap/CodepenProject1/index.html
@@ -46,7 +46,7 @@
 
                         A female student named Tove Monni completed the task by sending him an email asking him out on a
                         date. He accepted and three years later the first of their three daughters was born.</li>
-                    <li><strong>1995</strong> Linus moved to the US in 1997 and settled there with his wife Tove and
+                    <li><strong>1997</strong> Linus moved to the US in 1997 and settled there with his wife Tove and
                         their
                         three daughters. </li>
                     <li><strong>2000</strong> In 2000, Apple’s founder Steve Jobs invited him to work on Apple’s macOS.
@@ -62,7 +62,7 @@
                         done
                         just before he signed the controversial code of conduct for Linux kernel developers.
                     </li>
-                    <li><strong>2010</strong>He became a US citizen in 2010. At present, he works full-time on the Linux
+                    <li><strong>2010</strong> e became a US citizen in 2010. At present, he works full-time on the Linux
                         kernel as part of the Linux Foundation.</li>
                 </ul>
             </div>
