--- a/Bootstrap/FreecodecampProject4/index.html
+++ b/Bootstrap/FreecodecampProject4/index.html
@@ -14,26 +14,28 @@
         <header id="title">AWS Documentation</header>
         <ul>
             <li>
-                <a class="nav-link" href="#ec2"> What is Amazon EC2?</a>
+                <a class="nav-link" href="#What_is_Amazon_EC2">What is Amazon EC2</a>
             </li>
             <li>
-                <a class="nav-link" href="#set_up"> Set up</a>
+                <a class="nav-link" href="#Set_up_to_use_Amazon_EC2">Set up to use Amazon EC2</a>
             </li>
             <li>
-                <a class="nav-link" href="#introduction"> For Ubuntu Server</a>
+                <a class="nav-link" href="#Create_a_key_pair_using_a_third-party_tool_and_import_the_public_key_to_Amazon_EC2">Create a key pair using a third-party tool and import the public key to Amazon EC2</a>
             </li>
             <li>
-                <a class="nav-link" href="#introduction"> For Centos Server</a>
+                <a class="nav-link" href="#Create_a_security_group">Create a security group</a>
             </li>
             <li>
-                <a class="nav-link" href="#introduction"> Encrypt Arclight</a>
+                <a class="nav-link" href="#Launch_an_instance">Launch an instance</a>
             </li>
         </ul>
     </nav>
 
     <main id="main-doc">
-        <section class="main-section" id="ec2">
-            <h2>What is Amazon EC2?</h2><br>
+        <section class="main-section" id="What_is_Amazon_EC2">
+            <header>
+                <h2>What is Amazon EC2</h2>
+            </header><br>
             <article>
                 <p>Amazon Elastic Compute Cloud (Amazon EC2) provides scalable computing capacity in the Amazon Web
                     Services (AWS) Cloud. Using Amazon EC2 eliminates your need to invest in hardware up front, so you
@@ -59,18 +61,18 @@
                     <p>Storage volumes for temporary data that's deleted when you stop, hibernate, or terminate your
                         instance, known as instance store volumes</p>
                 </li>
-                <li>
-                    <p>Multiple physical locations for your resources, such as instances and Amazon EBS volumes, known
-                        as Regions and Availability Zones</p>
-                </li>
+                <p>Multiple physical locations for your resources, such as instances and Amazon EBS volumes, known
+                    as Regions and Availability Zones</p>
+                <li></li>
             </ul><br>
         </section>
-
-        <section class="main-section" id="set_up">
-            <h2>Set up to use Amazon EC2</h2><br>
+        <section class="main-section" id="Set_up_to_use_Amazon_EC2">
+            <header>
+                <h2>Set up to use Amazon EC2</h2>
+            </header><br>
             <article>
                 <p>
-                    To create an AWS account:
+                    To create an AWS account:</p>
                 <ol>
                     <li>
                         Open <a href="https://aws.amazon.com/">https://aws.amazon.com/</a>
@@ -82,10 +84,137 @@
 
                     </li>
                 </ol>
-
-                </p>
+                <br>
             </article>
+        </section>
+        <section class="main-section" id="Create_a_key_pair_using_a_third-party_tool_and_import_the_public_key_to_Amazon_EC2">
+            <header>
+                <h2>Create a key pair using a third-party tool and import the public key to Amazon EC2</h2>
+            </header><br>
+            <article>
+                <p></p>
+                <ul>
+                    <li>
+                        Generate a key pair with a third-party tool of your choice. For example, you can use
+                        ssh-keygen (a tool provided with the standard OpenSSH installation). Alternatively, Java,
+                        Ruby, Python, and many other programming languages provide standard libraries that you can
+                        use to create an RSA or ED25519 key pair. <p>The private key must be in the PEM format. For
+                            example, use <code>ssh-keygen -m PEM</code> to generate the OpenSSH key in the PEM
+                            format.</p>
+                    </li>
+                    <li>
+                        Save the public key to a local file. For example, <code>~/.ssh/my-key-pair.pub</code>. The
+                        file name extension for this file is not important.
 
+                    </li><br>
+                    <li>
+                        Save the private key to a local file that has the <code>.pem</code> extension. For example,
+                        <code>~/.ssh/my-key-pair.pem</code>.
+                        <p></p>
+
+                        <p>
+                        <h6><b>Important:</b></h6>
+
+                        Save the private key file in a safe place. You'll need to provide the name of your public
+                        key when you launch an instance, and the corresponding private key each time you connect to
+                        the instance.
+                        </p>
+                    </li><br>
+                    <p>After you have created the key pair, use one of the following methods to import your public
+                        key to Amazon EC2.</p>
+                </ul>
+            </article>
+        </section>
+        <section class="main-section" id="Create_a_security_group">
+            <header>
+                <h2>Create a security group</h2>
+            </header>
+            <p>Security groups act as a firewall for associated instances, controlling both inbound and outbound
+                traffic at the instance level. You must add rules to a security group that enable you to connect
+                to your instance from your IP address using SSH. You can also add rules that allow inbound and
+                outbound HTTP and HTTPS access from anywhere.
+            </p>
+            <p>that if you plan to launch instances in multiple Regions, you'll need to create a security group
+                in each Region. For more information about Regions, see Regions and Zones.</p>
+            <h6><b>To create a security group with least privilege:</b></h6>
+            <ul>
+                <li>Open the Amazon EC2 console at https://console.aws.amazon.com/ec2/.</li>
+                <li>From the top navigation bar, select a Region for the security group. Security groups are
+                    specific to a Region, so you should select the same Region in which you created your key
+                    pair.</li>
+                <li>
+
+                    In the left navigation pane, choose Security Groups.
+                </li>
+                <li>
+
+                    Choose Create security group.
+                </li>
+                <li>
+                    For Inbound rules, create rules that allow specific traffic to reach your instance. For
+                    example, use the following rules for a web server that accepts HTTP and HTTPS traffic. For
+                    more examples, see Security group rules for different use cases.
+                    <ul>
+                        <li>
+
+                            Choose My IP to automatically add the public IPv4 address of your local computer.
+                        </li>
+                        <li>Choose Custom and specify the public IPv4 address of your computer or network in
+                            CIDR notation. To specify an individual IP address in CIDR notation, add the routing
+                            suffix <code>/32</code>, for example, <code>203.0.113.25/32</code>
+                            . If your company or your router allocates addresses from a range, specify the
+                            entire range, such as <code>203.0.113.0/24</code>.</li>
+                    </ul>
+                </li>
+                <li>
+
+                    For Outbound rules, keep the default rule, which allows all outbound traffic.
+                </li>
+                <li>
+
+                    Choose Create security group.
+                </li>
+            </ul>
+        </section>
+        <section class="main-section" id="Launch_an_instance">
+            <header>
+                <h2>Launch an instance</h2>
+            </header>
+            <article>
+                <p>You can launch a Linux instance using the AWS Management Console as described in the
+                    following procedure. This tutorial is intended to help you launch your first instance
+                    quickly, so it doesn't cover all possible options. For more information about the advanced
+                    options, see Launch an instance using the Launch Instance Wizard. For information about
+                    other ways to launch your instance, see Launch your instance.
+                </p>
+                <h6><b>To launch an instance:</b></h6>
+                <ul>
+                    <li>Open the Amazon EC2 console at https://console.aws.amazon.com/ec2/.</li><br>
+                    <li>
+
+                        From the console dashboard, choose Launch Instance.
+                    </li><br>
+                    <li>
+
+                        The Choose an Amazon Machine Image (AMI) page displays a list of basic configurations,
+                        called Amazon Machine Images (AMIs), that serve as templates for your instance. Select
+                        an HVM version of Amazon Linux 2. Notice that these AMIs are marked "Free tier
+                        eligible."
+                    </li><br>
+                    <li>
+
+                        On the Choose an Instance Type page, you can select the hardware configuration of your
+                        instance. Select the <code>t2.micro</code> instance type, which is selected by default.
+                        The <code>t2.micro</code> instance type is eligible for the free tier. In Regions where
+                        <code>t2.micro</code> is unavailable, you can use a <code>t3.micro</code> instance under
+                        the free tier. For more information, see AWS Free Tier.
+                    </li><br>
+                    <li>
+
+                        On the Choose a Region page, select the region in which you want to launch your
+                        instance.
+                        You can launch your instance in any region in the AWS partition. </li>
+            </article>
         </section>
     </main>
 
