fcc portfolio node js badge img fixed

--- a/Bootstrap/FreecodecampProject5/index.html
+++ b/Bootstrap/FreecodecampProject5/index.html
@@ -57,7 +57,7 @@
                 <img
                     src="https://img.shields.io/badge/jquery-%230769AD.svg?style=for-the-badge&logo=jquery&logoColor=white"></img>
                 <img
-                    src="(https://img.shields.io/badge/node.js-6DA55F?style=for-the-badge&logo=node.js&logoColor=white"></img>
+                    src="https://img.shields.io/badge/node.js-6DA55F?style=for-the-badge&logo=node.js&logoColor=white"></img>
                 <img
                     src="https://img.shields.io/badge/mysql-%2300f.svg?style=for-the-badge&logo=mysql&logoColor=white"></img>
                 <img
