--- a/PHP_Course/PROJECTS/AJAX/Introduction.html
+++ b/PHP_Course/PROJECTS/AJAX/Introduction.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -9,21 +10,24 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
 
 </head>
+
 <body>
     <div class="container">
-    <div id="loaddata"> <h2>This is going to change. </h2></div>
-    <button class = "btn btn-success" id="btnclick" > Click on It</button>
+        <div id="loaddata">
+            <h2>This is going to change. </h2>
+        </div>
+        <button class="btn btn-success" id="btnclick"> Click on It</button>
     </div>
 
-    <script type="text/javascript"> 
-    $(document).ready(function(){
-    $('#btnclick').click(function(){
-    $('#loaddata').load('load.html');
-    })    
-    });
+    <script type="text/javascript">
+        $(document).ready(function () {
+            $('#btnclick').click(function () {
+                $('#loaddata').load('load.html');
+            })
+        });
     </script>
 
-<!---------------------------------------------------------------------------------------------------------------------
+    <!---------------------------------------------------------------------------------------------------------------------
 The XMLHTTPRequest is used to exchange data with a server.
 To send request to a server, we use open() and send() methods of the XMLHttpsRequest object:
 open('method', 'url', 'async')   Specifies the type of request
@@ -41,30 +45,24 @@ The onreadystatechange property defines a function to be executed when the ready
 The status property and the statusText property hold the statuus of the XMLHttpsRequest object. -->
 
 
-<div class="container">
-<div id="ldata"><h2> This is going to be changed but using XMLHttpsRequest</h2></div>
-<div class="btn btn-primary" onclick="myfun()">Just Click</div>
-</div>
+    <div class="container">
+        <div id="ldata">
+            <h2> This is going to be changed but using XMLHttpsRequest</h2>
+        </div>
+        <div class="btn btn-primary" onclick="myfun()">Just Click</div>
+    </div>
 
-<script type="text/javascript">
-function myfun(){
-    var req = new XMLHttpRequest();
-    req.open('GET', 'load.html', true);
-    req.send();
-        req.onreadystatechange = function(){
-            if(req.readyState == 4 && req.status == 200){
-                document.getElementById('ldata').innerHTML = req.responseText;
-
-                
+    <script type="text/javascript">
+        function myfun() {
+            var req = new XMLHttpRequest();
+            req.open('GET', 'load.html', true);
+            req.send();
+            req.onreadystatechange = function () {
+                if (req.readyState == 4 && req.status == 200) {
+                    document.getElementById('ldata').innerHTML = req.responseText;
+                }
             }
-
         }
-
-}
-
-
-
-</script>
-
+    </script>
 </body>
 </html>
