--- a/Node.JS_Course/PROJECTS/iChat/public/index.html
+++ b/Node.JS_Course/PROJECTS/iChat/public/index.html
@@ -43,6 +43,7 @@
         </form>
     </div>
     <h3 class="clients-total" id="clients-total">Total Clients 2</h3>
+<script src="/socket.io/socket.io.js"></script>
+<script src="main.js"></script>
 </body>
-
 </html>
