--- a/Node.JS_Course/PROJECTS/Tail/index.html
+++ b/Node.JS_Course/PROJECTS/Tail/index.html
@@ -3,9 +3,11 @@
 <head>
   <title>tail.js</title>
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-  <script src="//code.jquery.com/jquery-2.1.4.min.js"></script>
-  <script src="//cdn.socket.io/socket.io-1.3.7.js"></script>
-
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.29.3/moment.min.js"
+  integrity="sha512-x/vqovXY/Q4b+rNjgiheBsA/vbWA3IVvsS8lkQSX1gQ4ggSJx38oI2vREZXpTzhAv6tNUaX81E7QBBzkpDQayA=="
+  crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+<script src="main.js"></script>
+<script src="https://cdn.socket.io/4.5.0/socket.io.min.js" integrity="sha384-7EyYLQZgWBi67fBtVxw60/OWl1kjsfrPFcaU0pp0nAh+i8FD068QogUvg85Ewy1k" crossorigin="anonymous"></script>
   <style>
     body
       { color: #1a2c37;
